# soldoresol

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
assets/: index.html  index.js
docs/: .gitignore  1.js  2.js  CNAME  config.toml  dice_bot.toml  index.html  main.js
docs/beta/: 1.js  2.js  config.toml  index.html  main.js
docs/dev/: 1.js  2.js  584.js  979.js.LICENSE.txt  config.toml  index.html  main.js
loaders/: ignore.js
src/: arena.rs  color.rs  color_system.rs  config.rs  debug.rs  dice_bot.rs  idb.rs  indexed_db.rs  js_object.rs  lib.rs  promise.rs  ramdom_id.rs  random_id.rs  skyway.js  skyway.rs  table.rs  timestamp.rs  udonarium.rs  util.rs
src/arena/: component.rs  mod.rs
src/arena.org/block/: shape_group.rs
src/arena.org/player/: player.rs
src/arena.org/resource/: data.rs  mod.rs
src/arena/block/: block_trait.rs  boxblock.rs  canvas_texture.rs  character.rs  chat.rs  chat_channel.rs  chat_message.rs  craftboard.rs  layer_group.rs  mod.rs  pointlight.rs  property.rs  scene.rs  shape_group.rs  table.rs  tag.rs  terran.rs  terran_texture.rs  textboard.rs  texture.rs  world.rs
src/arena/player/: mod.rs
src/arena/resource/: block_texture.rs  data.rs  image_data.rs  mod.rs
src/arena/user/: mod.rs  player.rs
src/arena/util/: cubebox.rs  mod.rs  pack.rs
src/block/: character.rs  memo.rs  mod.rs  property.rs  resource.rs  tag.rs  tags.rs  world.rs
src/block.org/: character.rs  mod.rs  property.rs  world.rs
src/block.org/chat/: mod.rs
src/block.org/table/: mod.rs
src/block.org/table_object/: measure.rs
src/block/chat/: item.rs  mod.rs  tab.rs
src/block/memo/: item.rs  mod.rs
src/block/table/: mod.rs  texture.rs
src/block/table_object/: area.rs  boxblock.rs  character.rs  measure.rs  mod.rs  route.rs  tablemask.rs
src/component/: app.rs  awesome.rs  btn.rs  chat.rs  checkbox.rs  color_picker.rs  config_loder.rs  connection.rs  constant.rs  context_menu.rs  contextmenu.rs  control.rs  dialog.rs  dropdown.rs  form.rs  handout.rs  icon.rs  image.rs  measure_length.rs  measure_tool.rs  mod.rs  modal.rs  modeless.rs  modeless_modal.rs  peer_connection.rs  radio.rs  room.rs  room_connection.rs  table.rs  text.rs
src/component.org/: awesome.rs  color_picker.rs
src/component.org/modal/: save_table.rs
src/component/atom/: align.rs  attr.rs  btn.rs  card.rs  chat_message.rs  checkbox.rs  collapse.rs  common.rs  dropdown.rs  empty.rs  fa.rs  file_catcher.rs  frame.rs  header.rs  heading.rs  loading_circle.rs  marker.rs  mod.rs  mouse_capture.rs  select.rs  slider.rs  tab_btn.rs  table.rs  tag.rs  text.rs
src/component/batch/: mod.rs  peer_connection.rs
src/component/connecter/: mod.rs
src/component/modal/: load_table.rs  mod.rs  room_setting.rs  save_table.rs  table_db.rs
src/component/modeless/: mod.rs  object_editor.rs
src/component/molecule/: block_prop.rs  color_pallet.rs  dialog.rs  mod.rs  modal.rs  modeless.rs  scene_list.rs  sortable.rs  tab_menu.rs  tab_modeless.rs  table_list.rs  tag_list.rs
src/component/organism/: block_option.rs  mod.rs  modal_chat_capture.rs  modal_chat_user.rs  modal_chatpallet.rs  modal_create_block_texture.rs  modal_create_terran_texture.rs  modal_dicebot.rs  modal_notification.rs  modal_resource.rs  modal_sign_in.rs  popup_color_pallet.rs  room_modeless.rs  scene_list.rs  tab_modeless_container.rs  table_menu.rs  world_view.rs
src/component/page/: mod.rs
src/component/room/: common.rs  mod.rs  modal.rs  modeless.rs
src/component/template/: basic_app.rs  common.rs  editor.rs  loader.rs  mod.rs
src/component/util/: cmds.rs  element_id.rs  mod.rs  router.rs  state.rs  styled.rs  window.rs
src/data_block/: mod.rs  property.rs  resource.rs
src/data_block/chat/: item.rs  mod.rs  tab.rs
src/dice_bot/: damage_rate.txt  mod.rs  sword_world.toml
src/dicebot/: mod.rs  sword_world.toml
src/js_zip/: js_zip.js  mod.rs
src/libs/: annotated.rs  clone_of.rs  clone_ref.rs  gen.rs  idb.rs  js_object.rs  macros.rs  mod.rs  modeless_list.rs  random_id.rs  select_list.rs  try_ref.rs  type_id.rs  window.rs
src/model/: camera.rs  character.rs  chat.rs  chat_item.rs  chat_tab.rs  color.rs  color_system.rs  config.rs  icon.rs  mod.rs  modeless.rs  personal_data.rs  property.rs  resource.rs  table.rs  tablemask.rs  texturelayer.rs  world.rs
src/renderer/: basic_renderer.rs  camera.rs  character_renderer.rs  mod.rs  model_matrix.rs  table_renderer.rs  webgl.rs
src/resource/: data.rs  mod.rs
src/shader/: character.rs  default.rs  mask.rs  mod.rs
src/skyway/: mod.rs
src/table/: camera.rs  mod.rs  renderer.rs  table_tool.rs
style/: _material_icon.scss  animation.scss  app.scss  bg.scss  btn.scss  cell.scss  centering.scss  chat.scss  checkbox.scss  clickable.scss  color.scss  container.scss  context_menu.scss  control.scss  cover.scss  dialog.scss  dropdown.scss  editormodeless.scss  fas.scss  flex.scss  form.scss  frame.scss  fullscreen.scss  grid.scss  handout.scss  icon.scss  justify.scss  keyvalue.scss  keyvalueoption.scss  linear.scss  measure_length.scss  measure_tool.scss  mincontent.scss  modal.scss  panel.scss  pure-button.scss  pure-form.scss  pure-menu.scss  radio.scss  scroll.scss  (+7 more)
style.org/: aside.scss  centering.scss  checkbox.scss  dropdown.scss  flex.scss  frame.scss  grid.scss  grubbed.scss  icon.scss  keyvalue.scss  keyvalueoption.scss  nogap.scss  pure-button.scss  pure-img.scss  toggle.scss  unselectable.scss
(+449 files in other folders)
