[package]
name = "soldoresol"
version = "0.1.0"
authors = ["soundrabbit <soundrabbitstd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]
base64 = "0.12.1"
bincode = "1.2.1"
hex = "0.4.2"
indexmap = "1.4.0"
js-sys = "0.3.36"
kanaria = "0.2.0"
ndarray = "0.13.0"
ordered-float = "1.0.2"
regex = "1"
sainome="0.1.9"
serde_json = "1.0"
serde_yaml = "0.8"
toml="0.5"
wasm-bindgen = "0.2.63"
xmltree = "0.10.1"

[dependencies.serde]
version = "1.0.110"
features = ["derive"]

[dependencies.kagura]
version = "0.10.0"

[dependencies.web-sys]
version = "0.3.32"
features = [
    "BlobPropertyBag",
    "CanvasRenderingContext2d",
    "Crypto",
    "DataTransfer",
    "DataTransferItemList",
    "DataTransferItem",
    "DomRect",
    "DomStringList",
    "DragEvent",
    "Event",
    "File",
    "FileList",
    "FileReader",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "ImageData",
    "Location",
    "MediaSource",
    "MouseEvent",
    "Node",
    "Url",
    "WebGlBuffer",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WheelEvent",
]
