[package]
name = "soldoresol"
version = "0.1.0"
authors = ["soundrabbit <soundrabbitstd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]
async-std = "1.7.0"
async-trait = "0.1.41"
base64 = "0.12.1"
bincode = "1.2.1"
downcast-rs = "1.2.0"
futures = "0.3"
hex = "0.4.2"
indexmap = "1.4.0"
isaribi="0.1"
js-sys = "0.3.36"
kanaria = "0.2.0"
lazy_static = "1.4.0"
ndarray = "0.13.0"
ordered-float = "1.0.2"
regex = "1"
sainome="0.1.9"
serde_json = "1.0"
serde_yaml = "0.8"
toml="0.5"
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"
xmltree = "0.10.1"

[dependencies.serde]
version = "1.0.110"
features = ["derive"]

[dependencies.kagura]
version = "0.12.0"

[dependencies.web-sys]
version = "0.3.32"
features = [
    "BlobPropertyBag",
    "CanvasRenderingContext2d",
    "Crypto",
    "CssRuleList",
    "CssStyleSheet",
    "DataTransfer",
    "DataTransferItemList",
    "DataTransferItem",
    "DomRect",
    "DomStringList",
    "DragEvent",
    "Event",
    "File",
    "FileList",
    "FileReader",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlStyleElement",
    "HtmlTextAreaElement",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "ImageData",
    "Location",
    "MediaSource",
    "MouseEvent",
    "Node",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "StyleSheet",
    "Url",
    "WebGlBuffer",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WheelEvent",
]
