[package]
name = "soldoresol"
version = "0.1.0"
authors = ["soundrabbit <soundrabbitstd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]
async-std = "^1.7"
async-trait = "^0.1"
base64 = "^0.12"
bincode = "^1.2"
downcast-rs = "^1.2"
futures = "^0.3"
hex = "^0.4"
indexmap = "^1.4"
js-sys = "^0.3"
kanaria = "^0.2"
lazy_static = "^1.4"
ndarray = "^0.15"
ordered-float = "^1.0"
regex = "^1.5"
sainome="^0.1"
serde_json = "^1.0"
serde_yaml = "^0.8"
toml="^0.5"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
xmltree = "^0.10"

[dependencies.isaribi]
version = "^0.2"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.kagura]
# version = "^0.13"
path="../Kagura"

[dependencies.web-sys]
version = "^0.3"
features = [
    "BlobPropertyBag",
    "CanvasRenderingContext2d",
    "Crypto",
    "CssRuleList",
    "CssStyleSheet",
    "DataTransfer",
    "DataTransferItemList",
    "DataTransferItem",
    "DomRect",
    "DomStringList",
    "DragEvent",
    "Event",
    "File",
    "FileList",
    "FileReader",
    "History",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlStyleElement",
    "HtmlTextAreaElement",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "ImageData",
    "Location",
    "MediaSource",
    "MouseEvent",
    "Node",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "StyleSheet",
    "TextMetrics",
    "Url",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlProgram",
    "WebGlRenderbuffer",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WheelEvent",
]
